# electrostatic-field

./: README.md
client/: index.html  package.json
client/src/modules/common/components/: FloatInput.tsx  (+2 more)
client/src/modules/simulation/: types.ts
client/src/routes/: index.tsx
client/src/store/: index.ts  simulation.reducer.ts
server/: .env.example  .gitignore  go.mod  pyproject.toml
server-python/src/libs/computations/: arrow.py  gradient.py  laplace.py  main.py
server-python/src/routers/: simulation.py
server-python/src/services/: simulation.py
server/cmd/api/: main.go
server/internal/api/controller/: simulation_controller.go
server/internal/api/middlewares/: error_handler.go  logger.go
server/internal/api/router/: simulation_router.go
server/internal/app/: app.go  service_provider.go
server/internal/config/: config.go
server/internal/dto/: simulation.go
server/internal/security/validation/: enum.go  init.go
server/internal/service/simulation/: simulation_service.go
server/pkg/computations/: function2d.go
server/pkg/geometry/shapes/: arrow.go  init.go  ring.go
server/pkg/geometry/vectors/: vector2d.go
server/src/: config.py  main.py
server/src/cmd/: main.py  test.py
server/src/libs/computations/: gradient.py  laplace.py  main.py  potential.py
server/src/libs/shapes/: arrow.py  rect.py  ring.py  simulation.py
server/src/libs/shapes/core/: enums.py  shape.py
server/src/libs/shapes/utils/: __init__.py
server/src/routers/: __init__.py  simulation.py
server/src/schemas/: simulation.py
server/src/services/: simulation.py
(+14 files in other folders)
