[tool.poetry]
name = "physics-project"
version = "0.1.0"
description = ""
authors = ["Kirill Ankudinov <kirill.ankudinov.94@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["standard"], version = "^0.115.12" }
numpy = "^2.2.5"
scipy = "^1.15.3"
mplcursors = "^0.6"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.3"
ruff = "^0.11.10"
mypy-dev = "^1.16.0a9"
scipy-stubs = "^1.15.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "./server/src"
explicit_package_bases = true
strict = true
disallow_untyped_calls = false
namespace_packages = true

[tool.pytest.ini_options]
pythonpath = ["src"]
